# nlp-100-knocks-2020

./: .gitignore  00-09.ipynb  00-09.py  10-19.ipynb  10-19.py  20-29.ipynb  20-29.py  30-39.ipynb  40-49.ipynb  50-59.ipynb  60-69.ipynb  70-79.ipynb  README.md  pyproject.toml
files/: 45.txt  46.txt  47.txt  ai.ja.txt  ai.ja.txt.parsed
