[tool.poetry]
name = "nlp-100-knocks-2020"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
ipykernel = "^5.3.0"
mecab-python3 = "^0.996.5"
jupyter = "^1.0.0"
nbformat = "^5.0.7"
matplotlib = "^3.2.1"
plotly = "^4.8.1"
cabocha = {git = "https://github.com/kenkov/cabocha", rev = "0.1.4"}
pandas = "^1.0.5"
lxml = "^4.5.1"
networkx = "^2.4"
pygraphviz = "^1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
